--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-wp-content/themes/hannnashints/node_modules/*
+wp-content/themes/hannnashints/node_modules
+wp-content/themes/hannnashints/node_modules/.bin
 wp-config.php
