--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-*.sql
 .ddev/
+wp-content/themes/hannnashints/node_modules
+wp-content/themes/hannnashints/node_modules/.bin
+wp-config.php
+wp-config-ddev.php
